# UA-ECT

./: README.md
1ano/[LABI] Laboratorios de Informatica/sockets/: b64.py  cifradecifra.py  client.py  common_comm.py  run_tcp.sh  server.py
1ano/[LSD] Laboratórios Sistemas Digitais/Fase1/: DataPath.vhd  IMemory.vhd  IMemory.vhd.bak  PC.vhd  ProcessadorCompleto.qsf  Registers.vwf  SignedExtend.vhd  cr_ie_info.json  pMux2_1.vhd  pMux2_1.vwf
1ano/[LSD] Laboratórios Sistemas Digitais/Fase2/: ControlUnit.bsf  ControlUnit.qpf  ControlUnit.qsf  ControlUnit.qws  ControlUnit.vhd  ControlUnit.vhd.bak  ControlUnit.vwf  ControlUnit_nativelink_simulation.rpt  ControlUnit_tb.vhd  ControlUnit_tb.vhd.bak  Waveform.vwf
1ano/[LSD] Laboratórios Sistemas Digitais/Fase3/: ALU.vwf  ControlUnit.vhd  ProcessadorCompleto.qsf  ProcessadorCompleto.qws  ProcessadorCompleto.vhd  ProcessadorCompleto_tmp_archive.qarlog  Registers.vhd  SignExtend.vhd  SignedExtend.vwf
1ano/[LSD] Laboratórios Sistemas Digitais/Fase4.1/: ALU.vhd.bak  ControlUnit.vhd  DMemory.vhd  DMemory.vhd.bak  DataPath.vhd  Datapath_Tb.vhd.bak  IMemory.vhd  IMemory.vwf  PC.vwf  ProcessadorCompleto.qws  ProcessadorCompleto.vhd  ProcessadorCompleto_nativelink_simulation.rpt  ProcessadorCompleto_tb.vhd  ProcessadorCompleto_tb.vhd.bak  SignExtend.vhd.bak  SignedExtend.vhd.bak
3ano/StandForU/: Questionario.docx  Questionario_SSS.docx  README.md
3ano/[IHC] Interação Humano Computador/: Artigo_IHC
3ano/[PECI] Projeto Final/: Comunication
3ano/[SIO] Seguranca/: resumo.txt
3ano/ia/: checklist
4ano/[EGS] Engenharia Gestão de Servicos/: README.md  create_images.sh  deployment.yaml  docker_images.sh  push_images.sh  remove_images.sh  storage.yaml
4ano/[IC] Informacao e Codificao/: notas
4ano/[IC] Informacao e Codificao/IC_Project2/src/: CMakeLists.txt  codec_golomb.h  codec_image.h  decoder_image.cpp  encoder_image.cpp  ex1.cpp  ex2.cpp  golomb_code_tests.cpp  golomb_codec_tests.cpp  numbers_to_encode.txt  out  out.ppm  secgolomb.cpp  secgolomb.h
4ano/[IC] Informacao e Codificao/IC_Project3/src/: CMakeLists.txt  Makefile  codec_image.h  codec_video.h  codec_video_tests.cpp  ex2_codec_video.cpp  ex2_decoder_video.cpp  golomb.h  lossy_codec.cpp  video_comp.cpp
4ano/[RSA] Redes e Sistemas Autonomos/: Untitled Diagram.drawio
5ano/[PW] Programacao Web/: Nomes Animais.docx  README.md
(+1789 files in other folders)
